petstore.yaml
# Source: https://github.com/solo-io/gloo/blob/main/example/petstore/petstore.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: petstore
  name: petstore
  namespace: default
spec:
  selector:
    matchLabels:
      app: petstore
  replicas: 1
  template:
    metadata:
      labels:
        app: petstore
    spec:
      containers:
        - image: soloio/petstore-example:latest
          name: petstore
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: petstore
  namespace: default
  labels:
    service: petstore
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
  selector:
    app: petstore
