virtualservice.yaml
# Source: https://docs.solo.io/gloo-edge/latest/guides/traffic_management/hello_world/
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: default
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - '*'
    routes:
      - matchers:
          - exact: /all-pets
        options:
          prefixRewrite: /api/pets
        routeAction:
          single:
            upstream:
              name: default-petstore-8080
              namespace: gloo-system
